Fix warn messages + Wrong songs replacement

--- a/src/render/Administration.html
+++ b/src/render/Administration.html
@@ -27,7 +27,7 @@
 
     <input type='checkbox' name='stopRetrying' id='stopRetrying' <%= stopRetrying %>/> <label for='stopRetrying'>stopRetrying</label><br><br>
     <input type="submit" value="Save Changes">
-    <!--<input type="submit" value="Re-stream" name="restream">-->
+    <input type="submit" value="Re-stream" name="restream">
 </form>
 </div>
 </center>
